--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "dependencies": {
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-scripts": "^3.3.0"
+    "react-scripts": "^3.3.0",
+    "use-query-params": "^0.4.5"
   },
   "scripts": {
     "start": "react-scripts start",
