--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-input-range": "^1.3.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.3.0",
     "use-query-params": "^0.4.5"
